--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -1,12 +1,14 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
+<head>
    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Luca Cotter">
-    <link rel="icon" href="https://getbootstrap.com/favicon.ico">
+    {% load static %}
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
     <title>Community Votes</title>
 
