changing to schoolvotes

--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -17,7 +17,7 @@
    {% load socialaccount %}
 
    <!-- <link rel="stylesheet" href="{% static 'votes/styles.css' %}"/> -->
-   <title>{% block title %}Community Votes{% endblock %}</title>
+   <title>{% block title %}School Votes{% endblock %}</title>
 
    <!-- Bootstrap core CSS -->
    {% load static %}
