changed from Community Votes to School Votes

--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -10,7 +10,7 @@
     {% load static %}
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 
-    <title>Community Votes</title>
+    <title>School Votes</title>
 
        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
    {% load static %}
@@ -33,7 +33,7 @@
 <body>
    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #4057B6;">
       <!-- <svg class="d-block" width="36" height="36" viewBox="0 0 612 612" xmlns="http://www.w3.org/2000/svg" focusable="false">\ -->
-     <a class="navbar-brand" href="#">Community Votes</a>
+     <a class="navbar-brand" href="#">School Votes</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
