Welcome to School* Votes

--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -15,7 +15,7 @@
 
 {% endblock %}
 {% block content %}
-  <h1>Welcome to Community Votes, {{ username }}</h1>
+  <h1>Welcome to School Votes, {{ username }}</h1>
   <hr>
   {% if message != None %}
   <strong> {{ message }} </strong> </br>
