--- a/votes/templates/votes/survey.html
+++ b/votes/templates/votes/survey.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Community Votes{% endblock %}
+{% block title %}School Votes{% endblock %}
 {% block sidenav %}
 {% endblock %}
 {% block content %}
