--- a/votes/templates/votes/survey.html
+++ b/votes/templates/votes/survey.html
@@ -22,7 +22,10 @@
          {% endfor %}
         </ul>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <input type="submit" value="Submit Vote">
+        <div class="jumbotron">
+            <input type="submit" value="Submit Vote">
+        </div>
+
 
      </form>
 {% endblock %}
