--- a/votes/templates/votes/survey.html
+++ b/votes/templates/votes/survey.html
@@ -23,7 +23,7 @@
         </ul>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <div class="jumbotron">
-            <input type="submit" value="Submit Vote">
+            <input class="btn btn-primary" type="submit" value="Submit Vote">
         </div>
 
 
