--- a/votes/static/votes/styles.css
+++ b/votes/static/votes/styles.css
@@ -48,7 +48,7 @@ h2 {
     margin-top: 20px;
     font-size: 18px;
     padding: 0px 10px;
-    font-size: 2vw
+    /* font-size: 2vw */
 }
 
 .cartlist {
