--- a/votes/static/votes/styles.css
+++ b/votes/static/votes/styles.css
@@ -3,16 +3,15 @@ body {
     font-family: "Lato", sans-serif;
 }
 
-/* p {
-    font-size: 1vw;
+@media only screen and (min-width: 450px) {
+body {
+    font-family: "Lato", sans-serif;
+    font-size: 36px;
 }
-h1 {
-  font-size: 3vw;
 }
 
-h2 {
-  font-size: 2.5vw;
-} */
+
+
 .sidenav {
     height: 100%;
     width: 20%;
@@ -42,18 +41,34 @@ h2 {
 }
 
 .main {
-    margin-left: 20%;
+    margin-left: 10%;
     margin-bottom: 100px;
     height: 100%;
     margin-top: 20px;
-    font-size: 1px;
+    font-size: 18px;
     padding: 0px 10px;
 }
 
+h1 {font-size: 20px}
+
+@media only screen and (min-width: 50px) {
+.main {
+    margin-left: 10%;
+    margin-bottom: 100px;
+    height: 100%;
+    margin-top: 20px;
+    font-size: 36px;
+    padding: 0px 10px;
+}
+h1   {font-size: 42px;}
+}
+
+
+
 .cartlist {
   list-style-type: none;
-  padding: 0
-  margin: 0
+  padding: 0;
+  margin: 0;
 }
 
 .progressBar {
@@ -68,92 +83,13 @@ h2 {
   background-color: #4CAF50;
 }
 
-/* @media only screen and (max-width: 600px) {
-    .main-sidenav-wrap {display:table;}
-    .main {display:table-footer-group; float: none;}
-    .sidenav {display:table-header-group; float: none;}
-} */
-/*
-.message_button {
-    background-color: white;
-    border: none;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+.survey {
+    font-size: 18px;
 }
 
-.create_channel_button {
-   background-color: white;
-   border: none;
-   color: black;
-   padding: 5px 10px;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 16px;
-   margin: 4px 10px;
-   cursor: pointer;
+@media only screen and (min-width: 450px) {
+.survey {
+    font-size: 36px;
+}
 }
 
-.create_channel_button:hover {
-   background-color: white;
-}
-
-.channel_textbox {
-   margin: 4px 10px;
-}
-
-.join_channel_button {
-   background-color: #fcf685;
-   border: none;
-   color: black;
-   padding: 5px 10px;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 18px;
-   margin: 4px 10px;
-   cursor: pointer;
-}
-
-.join_channel_button:hover {
-   background-color: white;
-}
-
-.del_button {
-   background-color: #fc8585;
-   border: none;
-   color: black;
-   padding: 2px 4px;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 12px;
-   margin: 4px 2px;
-   cursor: pointer;
-}
-
-div.ex1 {
-    width: 90%;
-    height: 70%;
-    overflow: scroll;
-}
-
-.split-para {
-   display:block;margin:10px;
-}
-.split-para span {
-   display:block;float:right;width:100%;margin-left:10px;
-}
-
-
-
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-} */
