--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -15,13 +15,14 @@
 
 {% endblock %}
 {% block content %}
-  <h1>Welcome to School Votes, {{ username }}</h1>
+<div class="container-fluid">
+  <h1 class="text-capitalize">Welcome to School Votes, {{ username }}</h1>
   <hr>
   {% if message != None %}
   <strong> {{ message }} </strong> </br>
   <hr>
   {% endif %}
-   Select a community in navigation bar.
+   Select a school in navigation bar.
    <hr>
-
+</div>
 {% endblock %}
