--- a/votes/templates/votes/survey.html
+++ b/votes/templates/votes/survey.html
@@ -6,6 +6,7 @@
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
+<div class="survey">
    <h1>Questions for Survey {{ survey.get_description }}</h1>
    <hr>
       <ul>
@@ -16,7 +17,7 @@
              <font color="blue">{{ question.text }}</font>
              <fieldset id="q{{question.id}}">
              {% for response in question.get_responses %}
-             <input type="radio" value="r{{response.id}}" name="q{{question.id}}"> {{ response.text }}</br>
+             <input type="radio" style="height:3vw; width:3vw; vertical-align: middle;" value="r{{response.id}}" name="q{{question.id}}"> {{ response.text }}</br>
                 <!-- <button onclick="myFunction()">Click me</button></li> -->
              {% endfor %}
              </fieldset>
@@ -27,5 +28,6 @@
 
 
      </form>
+</div>
 </div>
 {% endblock %}
