--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -34,7 +34,7 @@ for a Community Votes account and sign in below:
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
   <br>
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
 </form>
