--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -7,21 +7,11 @@
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1>{% trans "Login" %}</h1>
 
 
-<p>Please sign in with your <a href="{% provider_login_url 'google' %}">google account</a>. Or, <a href="{{ signup_url }}">sign up</a>
+<p>Please login with your <a href="{% provider_login_url 'google' %}">google account</a>. Or, <a href="{{ signup_url }}">sign up</a>
 for a Community Votes account and sign in below:
-
-<!-- <div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div> -->
 
 
 
