--- a/votes/templates/account/logout.html
+++ b/votes/templates/account/logout.html
@@ -5,9 +5,9 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+<h2>{% trans "Logout" %}</h2>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+<p>{% trans 'Are you sure you want to logout?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
