--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -10,9 +10,10 @@
 <h1>{% trans "Login" %}</h1>
 
 
-<p>Please login with your <a href="{% provider_login_url 'google' %}">google account</a>. Or, <a href="{{ signup_url }}">sign up</a>
+<p>Please login with your <a href="{% provider_login_url 'google' %}">google account</a>.
+   <!-- Or, <a href="{{ signup_url }}">sign up</a>
 for a Community Votes account and sign in below:
-
+ -->
 
 
 <p>{% blocktrans %}If you have not created an account yet, then please
