--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -10,7 +10,16 @@
 <h1>{% trans "Login" %}</h1>
 
 
-<p>Please login with your <a href="{% provider_login_url 'google' %}">google account</a>.
+<p>Please login with your <a href="{% provider_login_url 'google' %}">school google account</a>.
+<br/>
+smmk12 Email Example:
+<br/>
+John Henry Smith, ID: 123456
+<br/>
+Email: jhs@smmk12.org
+<br/>
+Password: 123456
+
    <!-- Or, <a href="{{ signup_url }}">sign up</a>
 for a Community Votes account and sign in below:
  -->
