--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -91,9 +91,15 @@
      <main>
        {% block content %}
        {% endblock %}
-       <p>&copy;2018 Luca Cotter. All rights reserved.</p>
      </main>
 </div>
+<!-- Copyright -->
+<footer class="page-footer font-small blue pt-4">
+<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All right reserverd.
+</div>
+</footer>
+
+<!-- Copyright -->
 
 <!--   </div> -->
 
