--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -94,8 +94,8 @@
      </main>
 </div>
 <!-- Copyright -->
-<footer class="page-footer font-small blue pt-4">
-<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All right reserverd.
+<footer class="page-footer font-small blue pt-4 fixed-bottom">
+<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserverd.
 </div>
 </footer>
 
