--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -95,7 +95,7 @@
 </div>
 <!-- Copyright -->
 <footer class="page-footer font-small blue pt-4 fixed-bottom">
-<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserverd.
+<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserved.
 </div>
 </footer>
 
