--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -94,7 +94,7 @@
      </main>
 </div>
 <!-- Copyright -->
-<footer class="page-footer font-small blue pt-4 fixed-bottom">
+<footer class="page-footer blue pt-4 fixed-bottom">
 <div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserved.
 </div>
 </footer>
