--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -15,7 +15,7 @@
 
 {% endblock %}
 {% block content %}
-<div class="container-fluid">
+<div class="mymain">
   <h1 class="text-capitalize">Welcome to School Votes, {{ username }}</h1>
   <hr>
   {% if message != None %}
@@ -25,4 +25,9 @@
    Select a school in navigation bar.
    <hr>
 </div>
+<!-- Copyright -->
+<footer class="page-footer blue pt-4 fixed-bottom">
+<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserved.
+</div>
+</footer>
 {% endblock %}
