--- a/votes/static/votes/styles.css
+++ b/votes/static/votes/styles.css
@@ -40,11 +40,13 @@ body {
     color: #f1f1f1;
 }
 
-.main {
+
+/* .main {
     margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 20px;
     margin-bottom: 100px;
     height: 100%;
-    margin-top: 20px;
     font-size: 18px;
     padding: 0px 10px;
 }
@@ -54,15 +56,46 @@ h1 {font-size: 20px}
 @media only screen and (min-width: 50px) {
 .main {
     margin-left: 10%;
+    margin-right:10%;
+    margin-top: 20px;
     margin-bottom: 100px;
     height: 100%;
+    font-size: 36px;
+    padding: 0px 10px;
+} */
+
+.mymain {
+    margin-left: 1%;
+    margin-right: 1%;
     margin-top: 20px;
+    margin-bottom: 100px;
+    height: 100%;
+    font-size: 24px;
+    padding: 0px 10px;
+}
+
+h1.mymain {
+   font-size: 28px;
+   line-height: 1.2;
+}
+
+h1 {font-size: 24px;}
+
+@media (min-width: 450px) {
+.mymain {
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 20px;
+    margin-bottom: 100px;
+    height: 100%;
     font-size: 36px;
     padding: 0px 10px;
 }
-h1   {font-size: 42px;}
-}
 
+h1.mymain {
+   font-size: 76px;
+   line-height: 1.2;
+}
 
 
 .cartlist {
@@ -92,4 +125,3 @@ h1   {font-size: 42px;}
     font-size: 36px;
 }
 }
-
