--- a/votes/templates/account/logout.html
+++ b/votes/templates/account/logout.html
@@ -1,20 +1,18 @@
 {% extends "base.html" %}
 
-{% load i18n %}
+<!-- {% load i18n %} -->
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}Sign Out{% endblock %}
 
 {% block content %}
-<h2>{% trans "Logout" %}</h2>
-
-<p>{% trans 'Are you sure you want to logout?' %}</p>
-
+<strong>Sign Out</strong>
+Are you sure you want to sign out?<br/>
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btn btn-primary" type="submit">{% trans 'Logout' %}</button>
+  <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
