--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -22,14 +22,16 @@
 
    <!-- Bootstrap core CSS -->
    {% load static %}
-   <link href="{% static '/votes/bootstrap.css' %}" rel="stylesheet">
+   <link href="{% static 'votes/bootstrap.css' %}" rel="stylesheet">
 
    <!-- Custom styles for this template -->
    <link href="{% static 'votes/starter-template.css' %}" rel="stylesheet">
    {% load static %}
    <link rel="stylesheet" href="{% static 'votes/bars.css' %}"/>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+   <link rel="stylesheet" href="{% static 'votes/styles-final.css' %}"/>
 </head>
+
 {% block script %}
 {% endblock %}
 <body>
