--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -3,10 +3,9 @@
 <!-- {% load i18n %} -->
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}Sign In{% endblock %}
 
 {% block content %}
-<div class="mymain">
 <h2>{% trans "Sign in" %}</h2>
 
 
@@ -20,8 +19,6 @@ If your name is "John Henry Smith" and your ID is: 123456, then
 Email: jhs@smmk12.org
 <br/>
 Password: 123456
-</div>
-
 <!-- Copyright -->
 <footer class="page-footer blue pt-4 fixed-bottom">
 <div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserved.
