--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -18,7 +18,7 @@
    {% load static %}
    {% load socialaccount %}
 
-   <title>{% block title %}School Votes{% endblock %}</title>
+   <title>School Votes</title>
 
    <!-- Bootstrap core CSS -->
    {% load static %}
