--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -6,7 +6,7 @@
 {% block head_title %}Sign In{% endblock %}
 
 {% block content %}
-<h2>{% trans "Sign in" %}</h2>
+<strong>Sign in</strong><br/>
 
 
 Please sign in with your school google account:<br/>
