--- a/votes/static/votes/styles.css
+++ b/votes/static/votes/styles.css
@@ -75,6 +75,18 @@ h1 {font-size: 20px}
 }
 
 h1.mymain {
+   font-size: 18px;
+   line-height: 1.2;
+}
+
+h1 {font-size: 22px;}
+
+.myfont-scaling-med {
+   font-size: 18px;
+}
+
+@media (min-width: 300px) {
+h1.mymain {
    font-size: 28px;
    line-height: 1.2;
 }
@@ -83,6 +95,7 @@ h1 {font-size: 24px;}
 
 .myfont-scaling-med {
    font-size: 24px;
+}
 }
 
 @media (min-width: 767px) {
