--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -38,7 +38,7 @@
    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #4057B6;">
       <!-- <svg class="d-block" width="36" height="36" viewBox="0 0 612 612" xmlns="http://www.w3.org/2000/svg" focusable="false">\ -->
      <!-- <a class="navbar-brand" href="#">School Votes</a> -->
-    <a class="navbar-brand" href="#"><span class="mb-0 h1"><span class="myfont-scaling-med">School Votes</span></span></a>
+    <a class="navbar-brand" href="#"><span class="mb-0"><span class="myfont-scaling-med">School Votes</span></span></a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
