--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -12,7 +12,7 @@
    <hr>
 <!-- Copyright -->
 <footer class="page-footer blue pt-4 fixed-bottom">
-<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserved.
+<div class="footer-copyright text-center py-3 bg-light">Copyright © 2018 Luca Cotter. All rights reserved.
 </div>
 </footer>
 {% endblock %}
