--- a/votes/static/votes/styles.css
+++ b/votes/static/votes/styles.css
@@ -85,6 +85,10 @@ h1 {font-size: 22px;}
    font-size: 18px;
 }
 
+.myfont-scaling-sm {
+   font-size: 12px;
+}
+
 
 @media (min-width: 367px) {
 .mymain {
@@ -107,6 +111,10 @@ h1 {
 
 .myfont-scaling-med {
    font-size: 24px;
+}
+
+.myfont-scaling-sm {
+   font-size: 14px;
 }
 }
 
