--- a/votes/templates/account/login.html
+++ b/votes/templates/account/login.html
@@ -21,7 +21,7 @@ Email: jhs@smmk12.org
 Password: 123456
 <!-- Copyright -->
 <footer class="page-footer blue pt-4 fixed-bottom">
-<div class="footer-copyright text-center py-3">© 2018 Copyright, Luca Cotter. All rights reserved.
+<div class="footer-copyright text-center py-3 myfont-scaling-sm bg-white">© 2018 Copyright, Luca Cotter. All rights reserved.
 </div>
 </footer>
    <!-- Or, <a href="{{ signup_url }}">sign up</a>
