adding multiple votes per question

--- a/votes/templates/base.html
+++ b/votes/templates/base.html
@@ -94,7 +94,7 @@
 
       </ul>
       <div class="form-inline my-2 my-lg-0 mb-0 h1">
-          <font color="white" class="text-capitalize"><span class="myfont-scaling-med">{{ username }}</span></font>
+          <font color="white" class="text-capitalize"><span class="myfont-scaling-med">{{ firstname }}</span></font>
       </div>
       <!-- <form class="form-inline my-2 my-lg-0">
          <input class="form-control mr-sm-2" placeholder="Search" aria-label="Search" type="text">
