--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -2,7 +2,7 @@
 {% load socialaccount %}
 
 {% block content %}
-  <strong class="text-capitalize">Welcome to School Votes, {{ username }}</strong>
+  <strong>Welcome to School Votes, {{ firstname }}</strong>
   <hr>
   {% if message != None %}
   <strong> {{ message }} </strong> </br>
