--- a/votes/templates/account/logout.html
+++ b/votes/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}Sign Out{% endblock %}
 
 {% block content %}
-<strong>Sign Out</strong>
+<strong>Sign Out</strong><br/>
 Are you sure you want to sign out?<br/>
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
